--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           month</label>
       </div>
       <div
-        class="switch-container items-center text-text space-x-2 sm:space-x-3 border-b-2 pb-12 px-1 sm:px-6 flex justify-center md:ml-24 md:space-x-5 text-xs sm:text-base">
-        <label for="switch" class="text-center">Monthly Billing</label>
+        class="switch-container items-center text-text space-x-2 sm:space-x-3 border-b-2 pb-12 px-1 sm:px-6 flex justify-center md:space-x-5 text-xs sm:text-base">
+        <label for="switch" class="text-center md:ml-24">Monthly Billing</label>
         <input type="checkbox" name="switch" id="switch" class="switch">
         <label for="switch" class="text-center">Yearly Billing</label>
         <small
